<resources>
    <string name="app_name">AspenBase</string>
    <string name="aspen">Aspen</string>
    <string name="planYour">Plan your</string>
    <string name="luxuriousVacation">Luxurious Vacation</string>
    <string name="explore">Explore</string>
    <string name="action_settings">Settings</string>
    <string name="homeLabel">Home Page</string>
    <string name="large_text">Large text</string>
    <string name="booking">Booking</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="favorite">Favorite</string>

    <!-- Screen A -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="aspenUsa">Aspen, USA</string>
    <string name="find_thing_to_do">Find thing to do</string>
    <string name="popular">Popular</string>
    <string name="see_all">See All</string>

    <!-- Screen B -->
    <string name="alley_palace">Alley Palace</string>
    <string name="recommended">Recommended</string>
    <string name="location">Location</string>
    <string name="hotel">Hotel</string>
    <string name="food">Food</string>
    <string name="adventure">Adventure</string>
    <string name="visit">Visit</string>
    <string name="tabPosition">Tab %d</string>
</resources>